--- a/ind-project/index.html
+++ b/ind-project/index.html
@@ -11,9 +11,9 @@
     <div class="container">
         <nav class="nav">
             <ul>
-                <li><a href="#">Main</a></li>
-                <li><a href="#">Topics</a></li>
-                <li><a href="#">Visuals</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Videos</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
