--- a/ind-project/index.html
+++ b/ind-project/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Articles</a></li>
                 <li><a href="#">Videos</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Info</a></li>
             </ul>
         </nav>
 
